aoc2024_13/rust/src/snapshots/aoc2024_12_rust__make_step_up.snap
---
source: aoc2024_12/rust/src/main.rs
assertion_line: 266
expression: board
snapshot_kind: text
---
....#.....
.........#
..........
..#.......
.......#..
....^.....
.#........
........#.
#.........
......#...
